# waypoint_manager

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  [  cmake_install.cmake  mainpage.dox  manifest.xml
catkin_generated/: generate_cached_setup.py  setup_cached.sh
devel/: .catkin  .rosinstall  setup.sh
gtest/: Makefile
lat_lon_data/: 0910_ikuta.txt  20150217map(0420での変更前).txt  20150217map(0420での変更前).txt~  20150217map.txt  20150217map.txt~  20150225.txt  20150225.txt~  DEntrance.txt  Dkan_gaishu.txt  Dkan_lat_lon.txt  Dkan_lat_lon.txt~  Dkan_lat_lon_1shu.txt  Dkan_lat_lon_1shu2.txt  Dkan_lat_lon__.txt  Dkan_lat_lon__.txt~  Dkan_start_lat_lon.txt  confirm_stop.txt  copy_20150217map.txt  dkan_1shu_shimizu1.txt  dkan_seimon.txt  forSI_C3.txt  for_Ekiden_ikt.txt  for_SI_C3.txt~  from_Dkan_to_Chuokan_lat_lon.txt  google_direction.py  ikuta-2km.txt  ikuta-2km_easy.txt  ikuta-msd1109.txt  ikuta-test.txt  ikuta1shu3.txt  ikuta3.txt  ikuta3.txt~  ikuta_1shu.txt  ikuta_lat_lon.txt  ikuta_slope_1shu.txt  jrm15_1.txt  jrm15_11.txt  jrm15_12.txt  jrm15_13.txt  jrm15_13.txt~  (+20 more)
launch/: rwrc15_waypoint_manager.launch  rwrc15_waypoint_manager.launch~  waypoint_for_path.launch  wp_mngr.launch
src/: .init_visu.cpp.swp  .read_wp_file.cpp.swp  .read_wp_file.h.swp  .rwrc15_waypoint_manager_ark.cpp.swp  Visualize_lib.cpp  Visualize_lib.h  init_visu.cpp  init_visu.h  path_smoother.cpp  read_wp_file.cpp  read_wp_file.h  rwrc14_waypoint_manager.cpp  rwrc14_waypoint_manager.cpp~  rwrc14_waypoint_manager_debug.cpp  rwrc14_waypoint_manager_debug.cpp~  rwrc14_waypoint_manager_ikuta.cpp  rwrc14_waypoint_manager_ikuta.cpp~  rwrc14_waypoint_manager_ikuta_input.cpp  rwrc14_waypoint_manager_tsukuba.cpp  rwrc14_waypoint_manager_tsukuba.cpp~  rwrc14_waypoint_manager_tsukuba_input.cpp  rwrc15_waypoint_manager.cpp  rwrc15_waypoint_manager_ark.cpp  sgt14_waypoint_manager.cpp  sgt15_waypoint_manager.cpp  sgt15_waypoint_manager.cpp~  test_rwrc15_waypoint_manager.cpp  test_rwrc15_waypoint_manager.cpp~
src/GPStoXY/: GPStoXY.cpp  GPStoXY.h
wp_list_xy/: dis4_waypoints.txt  fnl_ikuta01.txt  ikuchare_1_sm.txt  ikuchare_2_sm.txt  ikuchare_3_sm.txt  ikuchare_dkan3.txt  ikuchare_smooth_dkan3.txt  ikuchare_smooth_dkan4.txt  ikuchare_smooth_dkan4.txt~  ikuta01_new.txt  ikuta02_new.txt  ikuta03_new.txt  path_test.txt  path_test.txt~  tsukuba_waypoints.txt  tsukuba_waypoints_1107.txt  tsukuba_waypoints_original.txt
wp_list_xy/T_area/: T_area10_73.txt  T_area11_80.txt  T_area12_92.txt  T_area13_101.txt  T_area14_110.txt  T_area15_118.txt  T_area16_122.txt  (+8 more)
(+10 files in other folders)
